--- a/src/ErpEssentials.Application/ErpEssentials.Application.csproj
+++ b/src/ErpEssentials.Application/ErpEssentials.Application.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\ErpEssentials.SharedKernel\ErpEssentials.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
