feat(infra): Implement EF Core persistence layer and initial migration
-Adds and configures the AppDbContext for PostgreSQL, establishing the
  database session management for the application.
-Provides concrete repository implementations (ProductRepository,
  BrandRepository, CategoryRepository) for the domain interfaces.
-Registers all persistence services in the Api layer for dependency
  injection, decoupling the application from concrete implementations.
-Creates the initial database migration to build the schema from the
  domain model, enabling infrastructure-as-code.

--- a/src/ErpEssentials.Api/appsettings.json
+++ b/src/ErpEssentials.Api/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=erp-essentials-db;Username=postgres;Password=2143658709"
+  }
 }
