--- a/src/ErpEssentials.Infrastructure/ErpEssentials.Infrastructure.csproj
+++ b/src/ErpEssentials.Infrastructure/ErpEssentials.Infrastructure.csproj
@@ -4,6 +4,14 @@
     <ProjectReference Include="..\ErpEssentials.Application\ErpEssentials.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
