--- a/tests/ErpEssentials.Application.Tests/ErpEssentials.Application.Tests.csproj
+++ b/tests/ErpEssentials.Application.Tests/ErpEssentials.Application.Tests.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.8" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.2" />
@@ -21,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\ErpEssentials.Application\ErpEssentials.Application.csproj" />
+    <ProjectReference Include="..\..\src\ErpEssentials.Infrastructure\ErpEssentials.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
