--- a/src/ErpEssentials.Infrastructure/ErpEssentials.Infrastructure.csproj
+++ b/src/ErpEssentials.Infrastructure/ErpEssentials.Infrastructure.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ErpEssentials.Application\ErpEssentials.Application.csproj" />
+	<ProjectReference Include="..\ErpEssentials.Domain\ErpEssentials.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
