--- a/ErpEssentials.Stock/src/ErpEssentials.Stock.Infrastructure/ErpEssentials.Stock.Infrastructure.csproj
+++ b/ErpEssentials.Stock/src/ErpEssentials.Stock.Infrastructure/ErpEssentials.Stock.Infrastructure.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <ProjectReference Include="..\ErpEssentials.Stock.Application\ErpEssentials.Stock.Application.csproj" />
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
